ionic appp is ready

--- a/src/app/market/market.page.html
+++ b/src/app/market/market.page.html
@@ -81,4 +81,9 @@
     <ion-img src="assets/offline.png"></ion-img>
   </div>
 
+
+  <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+
 </ion-content>
