--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -1,7 +1,10 @@
 <ion-header>
   <ion-toolbar>
+
+
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
+      <ion-back-button icon="arrow-back"></ion-back-button>
     </ion-buttons>
     <ion-title>
       <ion-buttons>
