one change in lug

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
             <ion-text class="text-xl font-bold tracking-wide">Cryptonia</ion-text>
           </p>
           <div class="mb-10">
-            <ion-text class="tracking-wide">mfacubes@gmail.com</ion-text>
+            <ion-text class="tracking-wide">info@mfacubes.com</ion-text>
           </div>
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
             <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false"
