--- a/src/app/aboutus/aboutus.page.html
+++ b/src/app/aboutus/aboutus.page.html
@@ -100,8 +100,8 @@
     </ion-card-header>
     <ion-card-content>
       <p>Have questions or need support? Feel free to reach out to our dedicated support team at <a class="text-blue"
-          href="mailto:mfacubes@gmail.com
-        ">mfacubes@gmail.com
+          href="mailto:info@mfacubes.com
+        ">info@mfacubes.com
         </a>
       </p>
     </ion-card-content>
