--- a/src/app/market/market.page.html
+++ b/src/app/market/market.page.html
@@ -35,8 +35,8 @@
     <ion-select-option *ngFor="let v of compare" [value]="v">{{v}}</ion-select-option>
   </ion-select>
   <!--ionic app loads-->
-  <ion-list *ngIf="!nodata">
-    <ion-item *ngFor="let v of skeleton"  [hidden]="!showSkelton">
+  <ion-list>
+    <ion-item *ngFor="let v of skeleton" [hidden]="!showSkelton">
       <ion-avatar slot="start" class="item-avatar">
         <ion-skeleton-text animated></ion-skeleton-text>
       </ion-avatar>
@@ -77,15 +77,13 @@
     </ion-item>
   </ion-list>
 
-  <div *ngIf="!data.length && !showSkelton" class="flex items-center justify-center gap-2 flex-col border border-white w-32 h-32 mx-auto mt-10  rounded-full">
-    <ion-icon class="text-6xl" name="sad-outline"></ion-icon>
-    <ion-text>No Data</ion-text>
+  <div *ngIf="!data.length && !showSkelton" class="flex gap-2 flex-col items-center w-fit h-full mx-auto mt-20">
+    <img src="assets/nodata.png" class=" md:w-60 md:h-40  w-32 h-20" />
+    <ion-text class="w-52 text-center">You are probably offline. Slide down page to try again</ion-text>
   </div>
-  
-  <!--no data image display-->
-  <div *ngIf="nodata" class="ion-padding">
-    <ion-img src="assets/offline.png"></ion-img>
-  </div>
+
+
+
 
 
   <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
