--- a/src/app/market/market.page.html
+++ b/src/app/market/market.page.html
@@ -77,12 +77,19 @@
     </ion-item>
   </ion-list>
 
-  <div *ngIf="!data.length && !showSkelton" class="flex gap-2 flex-col items-center w-fit h-full mx-auto mt-20">
+  <div *ngIf="offline && !showSkelton" class="flex gap-2 flex-col items-center w-fit h-full mx-auto mt-20">
     <img src="assets/nodata.png" class=" md:w-60 md:h-40  w-32 h-20" />
     <ion-text class="w-52 text-center">You are probably offline. Slide down page to try again</ion-text>
   </div>
 
 
+  <div *ngIf="!offline && !data.length" class="flex flex-col items-center justify-center h-full">
+    <ion-icon name="information-circle-outline" size="large" color="primary"></ion-icon>
+    <h2 class="text-xl font-bold text-gray-800 dark:text-gray-50 mt-4">No Data Available</h2>
+    <p class="text-sm text-gray-600  dark:text-gray-100 mt-2 text-center">
+      Sorry, there's no data to display at this time.
+    </p>
+  </div>
 
 
 
